# social_benchmark

./: .gitignore  .mcp.json  README.md  claude.md  codex.md  data-pipeline.md  description.md  plan.md  pyproject.toml
.serena/: project.yml
analysis/: _tmp_gated_summary.py  architecture-upgrade-report-2026-06-07.md  extractor-bakeoff-report-2026-06-01.md  gold-evaluation-report-2026-06-06.md  gpu-training-report-2026-06-06.md  hn_labeling_iteration_report_2026-05-31.md  initial-signal-test.md  round2-review-processing-report-2026-06-07.md  round5-polarity-iteration-report-2026-06-12.md  soft-chain-and-retrieval-report-2026-06-07.md  stacked-encoder-iteration-report-2026-06-11.md  targeted-review-processing-report-2026-06-06.md
config/: model_registry.json  sources.json
datasets/: MANIFEST.md  README.md
docs/: classification-roadmap.md  labeling-guide.md  review-workflow.md  web-dashboard.md
scripts/: gen_seed_sql.py  rebuild_snapshot.py
tests/: test_active_learning.py  test_analysis.py  test_classifier_experiments.py  test_clients.py  test_collection.py  test_constraint_resolver.py  test_embeddings.py  test_extractor.py  test_finetune_experiments.py  test_firsthand.py  test_hf_classifier.py  test_high_precision_classifier.py  test_label_feedback.py  test_labeling.py  test_local_classifier.py  test_nli_features.py  test_publication_readiness.py  test_routed_classifier.py  test_rubric_classifier.py  test_score_snapshot.py  test_scoring.py  test_setfit_experiments.py  test_sklearn_classifier.py  test_soft_chain_classifier.py  test_structured_classifier.py  (+2 more)
(+247 files in other folders)
