[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "social-benchmark"
version = "0.1.0"
description = "Human-perceived LLM benchmark data pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sb-pipeline = "social_benchmark.pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

