[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "social-benchmark"
version = "0.1.0"
description = "Human-perceived LLM benchmark data pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
hf = [
    "sentence-transformers>=3.0,<4",
    "torch>=2.3,<3",
    "transformers>=4.42,<5",
]
setfit = [
    "setfit>=1.1,<2",
]

[project.scripts]
sb-pipeline = "social_benchmark.pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
